# kaggle-cmi-2025-demo-submission

./: .gitignore  CLAUDE.md  Kaggle-Competition.md  Makefile  README.md  TODO.md  pyproject.toml  sample_submission.py  script.sql  submission_lightgbm.py
.claude-code/: settings.json
docs-for-human/: Data.md  Model.md
kaggle_evaluation/: cmi_gateway.py
kaggle_evaluation/core/: base_gateway.py  relay.py  templates.py
mlruns/0/: meta.yaml
mlruns/507244987434222773/: meta.yaml
mlruns/507244987434222773/873dc89e1c944793bc55508bc0179828/metrics/: binary_f1  competition_score  feature_importance_1  feature_importance_10  feature_importance_2  feature_importance_3  feature_importance_4  feature_importance_5  feature_importance_6  feature_importance_7  feature_importance_8  feature_importance_9  macro_f1
mlruns/507244987434222773/873dc89e1c944793bc55508bc0179828/params/: top_feature_1  top_feature_10  top_feature_2  top_feature_3  top_feature_4  top_feature_5  top_feature_6  top_feature_7  top_feature_8  top_feature_9
mlruns/507244987434222773/873dc89e1c944793bc55508bc0179828/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/507244987434222773/8f12f281485c4edcb32582b70183868e/: meta.yaml
mlruns/507244987434222773/8f12f281485c4edcb32582b70183868e/metrics/: binary_f1  competition_score  feature_importance_acc_x  feature_importance_acc_y  feature_importance_acc_z  feature_importance_rot_w  feature_importance_rot_x  feature_importance_rot_y  (+5 more)
src/: 1d_cnn.py  lightgbm.py  lightgbm_model.py  lightgbm_simple.py
src/notebook/: main.ipynb  main.py  visualize.py
(+6 files in other folders)
