[project]
name = "ml-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupytext>=1.17.2",
    "lightgbm>=4.0.0",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1,<4.0.0",
    "mypy>=1.16.1",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "polars (>=1.31.0,<2.0.0)",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "ty>=0.0.1a12",
    "typer>=0.12.0",
]

[tool.uv]
package = false

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
python_version = "3.13"

[[tool.mypy.overrides]]
module = ["sklearn.*"]
ignore_missing_imports = true
